--- a/_posts/2022-03-02-liczby1-100.markdown
+++ b/_posts/2022-03-02-liczby1-100.markdown
@@ -3,6 +3,7 @@ layout: post
 title:  "Liczby 1-100 podzielne przez 5"
 date:   2022-03-02 06:34:00 +0100
 categories: jekyll update
+permalink: /zadanie-liczby_1-100/
 ---
 Zadanie wypisz liczby podzielne przez 5 z przedziału (1-100)
 ```html
@@ -12,7 +13,7 @@ Zadanie wypisz liczby podzielne przez 5 z przedziału (1-100)
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Liczby podzielne przez 5 - Walukiewicz</title>
+  <title>Liczby podzielne przez 5</title>
 </head>
 <body>
   <script>
@@ -21,7 +22,6 @@ Zadanie wypisz liczby podzielne przez 5 z przedziału (1-100)
         document.write(`${i}<br>`)
       }
     }
-    // Walukiewicz Lukasz
   </script>
 </body>
 </html>
